# delineation

./: .gitignore  CHANGELOG.md  README.md  default.nix  delineation.cabal
app/: Main.hs
